# mtga-helper

./: .gitignore  BUILD  BUILD.bazel  LICENSE  README.md  WORKSPACE  WORKSPACE.bazel  go.mod  go.work  go.work.sum  go_repositories.bzl  gqlgen.bzl
server/: BUILD  BUILD.bazel  go.mod  go.sum  gqlgen.yml  server.go
server/graph/: BUILD  generated.go  gqlgen.yml  schema.resolvers.go
server/graph/schema/: Person.gql  ServiceWorker.gql  Todo.gql  User.gql  _Root.gql
server/mtga/: BUILD.bazel  event_kind.go  winrate.go  winrate_test.go
server/mtga/formats/: BUILD.bazel  formats.go
server/mtga/sets/: BUILD.bazel  sets.go
