load("@bazel_gazelle//:def.bzl", "gazelle")

# gazelle:prefix github.com/Manbeardo/mtga-helper
gazelle(name = "gazelle")

gazelle(
    name = "gazelle-update-repos",
    args = [
        "-from_file=go.work",
        "-to_macro=go_repositories.bzl%go_repositories",
        "-prune",
    ],
    command = "update-repos",
)
