load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "server_lib",
    srcs = ["server.go"],
    importpath = "github.com/Manbeardo/mtga-helper/server",
    visibility = ["//visibility:private"],
    deps = ["@com_github_99designs_gqlgen//graphql/playground"],
)

go_binary(
    name = "server",
    embed = [":server_lib"],
    visibility = ["//visibility:public"],
)
